# graduation_thesis_artifacts

todo_01/: README.md  (+1 more)
todo_01_cor/: pyproject.toml
todo_01_cor/specs/1-todo-weather-cli/: data-model.md  quickstart.md
todo_01_cor/specs/1-todo-weather-cli/checklists/: requirements.md
todo_01_cor/src/: __init__.py
todo_01_cor/src/utils/: logging.py
todo_01_cor/tests/unit/: test_errors.py  test_parse_date.py  test_store.py
todo_03/: pyproject.toml
todo_03/specs/1-todo-cli-scheduler/contracts/: schema.json
todo_03/src/services/: scheduler.py  weather.py
todo_03/src/todo_cli/: config.py
todo_spe/todo_02/: debug_test.db  pyproject.toml  requirements.txt  todo.db
todo_spe/todo_02/scripts/: count_tasks.py  debug_list.py
todo_spe/todo_02/specs/001-todo-weather-scheduler/: plan.md  quickstart.md  tasks.md
todo_spe/todo_02/specs/1-todo-weather-scheduler/: spec.md
todo_spe/todo_02/src/: __init__.py
todo_spe/todo_02/src/cli/: __init__.py
todo_spe/todo_02/src/db/: db.py
todo_spe/todo_02/src/lib/: errors.py
todo_spe/todo_02/src/models/: location_model.py
todo_spe/todo_02/src/services/: geocode.py  parser.py  scheduler.py  timezone_utils.py  weather.py
todo_spe/todo_02/tests/unit/: test_parser.py
todo_spe/todo_04/: pyproject.toml
todo_spe/todo_04/docs/: README.md
todo_spe/todo_04/specs/001-todo-cli-weather/: data-model.md  tasks.md
todo_spe/todo_04/src/cli/: __main__.py
todo_spe/todo_04/src/models/: forecast.py  task.py
todo_spe/todo_04/src/services/: date_parser.py  forecast_cache.py  geocode.py  scheduler.py  weather.py
(+170 files in other folders)
