[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "todo-weather-cli"
version = "0.1.0"
description = "CLI Todo app that suggests dates based on weather forecasts"
authors = [ { name = "Generated", email = "dev@example.com" } ]
requires-python = ">=3.11"
