[build-system]
requires = ["setuptools>=42","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "todo-cli-scheduler"
version = "0.1.0"
description = "CLI Todo scheduler with weather-aware candidate dates"
requires-python = ">=3.11"
keywords = ["todo","cli","scheduler","weather"]
