[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "todo-cli-weather"
version = "0.0.0"
description = "CLI Todo app with weather-based scheduling"
authors = [ { name="todo-sys" } ]
requires-python = ">=3.11"

[tool.pytest]
addopts = "-q"

[project.scripts]
todo = "src.cli:main"
